# 42checkin

./: .gitignore  README.md  pyproject.toml  run.sh
account/: models.py  urls.py
cadet/: admin.py  apps.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
cadet/templates/: main.html
common/: api_excpetions.py  serializers.py
common/models/: soft_delete_mixin.py
core/: root_views.py  settings.py  urls.py
